--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,6 @@
 version: '3.7'
 services:
 
-  traefik:
-    image: traefik:latest
-    container_name: traefik
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    networks:
-       proxy:
-    ports:
-      - 80:80
-      - 443:443
-      - 8080:8080
-    environment:
-      - CF_API_EMAIL=$CF_API_EMAIL
-      - CF_DNS_API_TOKEN=$CF_DNS_API_TOKEN
-      - CF_API_KEY=$CF_API_KEY
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - $DSOCK:/var/run/docker.sock:ro
-      - $DAPPS/traefik/traefik.yml:/traefik.yml:ro
-      - $DAPPS/traefik/acme.json:/acme.json
-      - $DAPPS/traefik/config.yml:/config.yml:ro
-      - $DAPPS/traefik/logs:/var/log/traefik
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.traefik.entrypoints=http"
-      - "traefik.http.routers.traefik.rule=Host(`traefik.$DOMAIN_NAME`)"
-      - "traefik.http.middlewares.traefik-auth.basicauth.users=$TRAEFIKUSERPASS"
-      - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
-      - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
-      - "traefik.http.routers.traefik-secure.entrypoints=https"
-      - "traefik.http.routers.traefik-secure.rule=Host(`traefik.$DOMAIN_NAME`)"
-      - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
-      - "traefik.http.routers.traefik-secure.tls=true"
-      - "traefik.http.routers.traefik-secure.tls.certresolver=cloudflare"
-      - "traefik.http.routers.traefik-secure.tls.domains[0].main=$DOMAIN_NAME"
-      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.$DOMAIN_NAME"
-      - "traefik.http.routers.traefik-secure.service=api@internal"
-
   portainer:
     image: portainer/portainer-ce:latest
     volumes:
@@ -55,28 +15,6 @@ services:
     restart: always
     security_opt:
       - no-new-privileges:true
-    labels:
-      # Enable traefik
-      - "traefik.enable=true"
-      # basic auth if needed
-      #- "traefik.http.middlewares.portainer-auth.basicauth.users=$TRAEFIKUSERPASS"
-      #- "traefik.http.routers.portainer-secure.middlewares=portainer-auth"
-      # entry point HTTP -> redirect to HTTPS
-      - "traefik.http.routers.portainer.entrypoints=http"
-      - "traefik.http.routers.portainer.rule=Host(`portainer.$DOMAIN_NAME`)"
-      - "traefik.http.middlewares.portainer-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.routers.portainer.middlewares=portainer-https-redirect"
-      # entry point HTTPS -> forward to service
-      - "traefik.http.routers.portainer-secure.entrypoints=https"
-      - "traefik.http.routers.portainer-secure.rule=Host(`portainer.$DOMAIN_NAME`)"
-      - "traefik.http.routers.portainer-secure.tls=true"
-      # resolver cloudflare - cloudflare or tls, not both
-      - "traefik.http.routers.portainer-secure.tls.certresolver=cloudflare"
-      # resolver tls - using tls, traefik ssl from cloudflare wildcard
-      #- "traefik.http.routers.portainer-secure.tls.certresolver=tls"
-      - "traefik.http.routers.portainer-secure.service=portainer"
-      - "traefik.http.services.portainer.loadbalancer.server.port=9000"
-      - "traefik.docker.network=proxy"
 
   whoami:
     image: "traefik/whoami"
@@ -88,24 +26,11 @@ services:
     ports:
       - '8086:8086'
     restart: always
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.whoami.entrypoints=http"
-      - "traefik.http.routers.whoami.rule=Host(`whoami.epicinsomniac.com`)"
-      - "traefik.http.middlewares.whoami-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.routers.whoami.middlewares=whoami-https-redirect"
-      - "traefik.http.routers.whoami-secure.entrypoints=https"
-      - "traefik.http.routers.whoami-secure.rule=Host(`whoami.epicinsomniac.com`)"
-      - "traefik.http.routers.whoami-secure.tls=true"
-      - "traefik.http.routers.whoami-secure.tls.certresolver=tls"
-      - "traefik.http.routers.whoami-secure.service=whoami"
-      - "traefik.http.services.whoami.loadbalancer.server.port=8086"
-      - "traefik.docker.network=proxy"
 
   netdata:
     image: netdata/netdata
     container_name: netdata
-    hostname: netdata.epicinsomniac.com # set to fqdn of host
+    hostname: monitor.home.lab
     ports:
       - 19999:19999
     expose:
@@ -131,34 +56,6 @@ services:
       - /sys:/host/sys:ro
       - /etc/os-release:/host/etc/os-release:ro
       - $DSOCK:/var/run/docker.sock:ro
-    labels:
-      # Enable traefik
-      - "traefik.enable=true"
-      # basic auth if needed
-      #- "traefik.http.middlewares.netdata-auth.basicauth.users=USER-PASS"
-      #- "traefik.http.routers.netdata-secure.middlewares=netdata-auth"
-      # entry point HTTP -> redirect to HTTPS
-      - "traefik.http.routers.netdata.entrypoints=http"
-      - "traefik.http.routers.netdata.rule=Host(`netdata.epicinsomniac.com`)"
-      - "traefik.http.middlewares.netdata-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.routers.netdata.middlewares=netdata-https-redirect"
-      # entry point HTTPS -> forward to service
-      - "traefik.http.routers.netdata-secure.entrypoints=https"
-      - "traefik.http.routers.netdata-secure.rule=Host(`netdata.epicinsomniac.com`)"
-      - "traefik.http.routers.netdata-secure.tls=true"
-      # resolver cloudflare - cloudflare or tls, not both
-      - "traefik.http.routers.netdata-secure.tls.certresolver=cloudflare"
-      # resolver tls
-      #- "traefik.http.routers.netdata-secure.tls.certresolver=tls"
-      - "traefik.http.routers.netdata-secure.service=netdata"
-      - "traefik.http.services.netdata.loadbalancer.server.port=19999"
-      - "traefik.docker.network=proxy"
-
-networks:
-  proxy:
-    external: true
-  internal:
-    external: false
 
 volumes:
   netdataconfig:
