--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DSOCK=/var/run/docker.sock
-DAPPS=/home/sysadmin/dock/apps
-TZ=America/Chicago
-DROOT=/home/sysadmin/dock
-USERROOT=/home/sysadmin
+DAPPS=/home/<USERNAME>/dock/apps
+TZ=<YOUR-TIME-ZONE>
+DROOT=/home/<USERNAME>/dock
+USERROOT=/home/<USERNAME>
