--- a/.env-sample
+++ b/.env-sample
@@ -3,3 +3,5 @@ DAPPS=/home/<USERNAME>/dock/apps
 TZ=<YOUR-TIME-ZONE>
 DROOT=/home/<USERNAME>/dock
 USERROOT=/home/<USERNAME>
+UMASK=<USER MASK>
+PGUID=<UID AND GID IN ONE>
